Fix an overflow issue

--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ a {
 .info .card-container {
     display: flex;
     gap: 50px;
-    padding: 0px 300px;
+    margin: 0px 100%;
     align-items: center;
     justify-content: center;
     text-align: center;
